--- a/mainwindowm.ui
+++ b/mainwindowm.ui
@@ -1362,21 +1362,21 @@
           <widget class="QLabel" name="label">
            <property name="geometry">
             <rect>
-             <x>10</x>
-             <y>5</y>
+             <x>0</x>
+             <y>0</y>
              <width>91</width>
              <height>21</height>
             </rect>
            </property>
            <property name="text">
-            <string>Video Source:</string>
+            <string>Select Camera</string>
            </property>
           </widget>
           <widget class="QComboBox" name="cmbSource">
            <property name="geometry">
             <rect>
-             <x>100</x>
-             <y>1</y>
+             <x>90</x>
+             <y>0</y>
              <width>91</width>
              <height>31</height>
             </rect>
@@ -1387,69 +1387,30 @@
             </property>
            </item>
           </widget>
-          <widget class="QLabel" name="label_11">
-           <property name="geometry">
-            <rect>
-             <x>10</x>
-             <y>45</y>
-             <width>91</width>
-             <height>21</height>
-            </rect>
-           </property>
-           <property name="text">
-            <string>Video Source:</string>
-           </property>
-          </widget>
           <widget class="QPushButton" name="btnBrowns">
            <property name="geometry">
             <rect>
-             <x>100</x>
-             <y>40</y>
-             <width>91</width>
+             <x>230</x>
+             <y>0</y>
+             <width>111</width>
              <height>32</height>
             </rect>
            </property>
            <property name="text">
-            <string>Browns</string>
-           </property>
-          </widget>
-          <widget class="QLabel" name="label_12">
-           <property name="geometry">
-            <rect>
-             <x>200</x>
-             <y>10</y>
-             <width>59</width>
-             <height>16</height>
-            </rect>
-           </property>
-           <property name="text">
-            <string>File name::</string>
+            <string>Take a picture</string>
            </property>
           </widget>
           <widget class="Line" name="line">
            <property name="geometry">
             <rect>
-             <x>180</x>
-             <y>10</y>
+             <x>183</x>
+             <y>0</y>
              <width>20</width>
-             <height>51</height>
+             <height>71</height>
             </rect>
            </property>
            <property name="orientation">
             <enum>Qt::Vertical</enum>
-           </property>
-          </widget>
-          <widget class="QLabel" name="lblFileName">
-           <property name="geometry">
-            <rect>
-             <x>270</x>
-             <y>10</y>
-             <width>101</width>
-             <height>21</height>
-            </rect>
-           </property>
-           <property name="text">
-            <string>rupp.mp4</string>
            </property>
           </widget>
          </widget>
@@ -1937,7 +1898,7 @@
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <widget class="QGraphicsView" name="grapImage"/>
+        <widget class="CamViewer" name="camviewer"/>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout">
@@ -1961,14 +1922,21 @@
           <widget class="QComboBox" name="comboBox">
            <item>
             <property name="text">
-             <string>Horizontally</string>
+             <string> |</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Vertically</string>
+             <string>--</string>
             </property>
            </item>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btnStart">
+           <property name="text">
+            <string>Start</string>
+           </property>
           </widget>
          </item>
         </layout>
@@ -2434,7 +2402,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="lblYear">
+       <widget class="QLabel" name="lblDayOfWeek">
         <property name="sizeIncrement">
          <size>
           <width>8</width>
@@ -2867,7 +2835,7 @@
          <bool>true</bool>
         </property>
         <property name="text">
-         <string>2018</string>
+         <string>--</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -3308,7 +3276,7 @@
          <bool>true</bool>
         </property>
         <property name="text">
-         <string>30</string>
+         <string>--</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -3761,7 +3729,7 @@
          <bool>true</bool>
         </property>
         <property name="text">
-         <string>Setember</string>
+         <string>-</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -4202,7 +4170,7 @@
          <bool>true</bool>
         </property>
         <property name="text">
-         <string>12:00pm</string>
+         <string>----</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -6111,6 +6079,13 @@
    <addaction name="menuPeople_Counter"/>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>CamViewer</class>
+   <extends>QGraphicsView</extends>
+   <header location="global">camviewer.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
